<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffefefef"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/rev_data"
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:background="@drawable/input_search_pink"
        android:enabled="false"
        android:isScrollContainer="true"
        android:textColor="#000000"
        android:scrollbarStyle="insideOverlay" >
    </EditText>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/picc_open"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/picc_open"
                    android:textSize="20sp" >
                </Button>

                <Button
                    android:id="@+id/picc_check"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/picc_check"
                    android:textSize="20sp" >
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/EditTextEmission"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/input_search_pink"
                    android:hint="@string/picc_apdu_hint"
                    android:inputType="textCapCharacters|textNoSuggestions"
                    android:lines="1" >
                </EditText>

                <Button
                    android:id="@+id/def_apdu"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:text="@string/picc_def_apdu"
                    android:textSize="20sp" >
                </Button>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageview_cut"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="@drawable/cut_line"
                android:contentDescription="@drawable/cut_line" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10.0dip"
                android:text="@string/m1_card"
                android:textColor="#ff000000"
                android:textSize="17.0sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="44dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/block_no"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/input_search_pink"
                    android:hint="block NO"
                    android:numeric="integer" >
                </EditText>

                <Button
                    android:id="@+id/authen"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:text="@string/picc_authen"
                    android:textSize="20sp" >
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/auth_key"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/input_search_pink"
                    android:hint="@string/picc_apdu_key"
                    android:inputType="textCapCharacters|textNoSuggestions"
                    android:lines="1" >
                </EditText>

                <Button
                    android:id="@+id/r_block"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:text="@string/picc_read_block"
                    android:textSize="20sp" >
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/write_data"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/input_search_pink"
                    android:hint="@string/picc_apdu_hint"
                    android:inputType="textCapCharacters|textNoSuggestions"
                    android:lines="1" >
                </EditText>

                <Button
                    android:id="@+id/w_block"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:text="@string/picc_write_block"
                    android:textSize="20sp" >
                </Button>

                <Button
                    android:id="@+id/clear"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:text="@string/picc_write_clear"
                    android:textSize="20sp"
                    android:visibility="gone" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>